--- a/gb/22/10/25/n13852257.md
+++ b/gb/22/10/25/n13852257.md
@@ -1,29 +1,28 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>国际警惕中共正招募西方飞行员培训其军队</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/10/id13852327-000_14A9TX-600x400.jpg" />
-<h6>中共军方2012年已成功将一架歼-15战斗机降落在辽宁舰上。专家推测，中共招募外国飞行员为己培训或已进行十多年。图为2018年4月24日数架歼-15在辽宁舰上的海上演习。(AFP)
-</h6>
+<h6>中共军方2012年已成功将一架歼-15战斗机降落在辽宁舰上。专家推测，中共招募外国飞行员为己培训或已进行十多年。图为2018年4月24日数架歼-15在辽宁舰上的海上演习。(AFP)</h6>
 <hr>
 	<p>【大纪元2022年10月25日讯】（大纪元专题部记者江枫采访报导）中共在招募大批英、法、澳大利亚和加拿大的飞行员来培训中共军队。美国太平洋司令部夏威夷联合情报中心的前任行动主任卡尔?舒斯特（Carl Schuster）警告，这是西方帮助中共成为西方威胁的又一个例子。</p>
 <p>上周<ahref="https://www.cnn.com/2022/10/18/uk/uk-pilots-china-recruitment-intl-gbr/index.md#1">英国国防部表示</a>，有多达30名前英国军事飞行员目前正在中国提供培训，并且中共已经接触了许多其他人，包括目前正在服役的英国人员。</p>
 <p>英国国防部表示，中共利用第三方寻找英国的和其他西方飞行员直接培训中国飞行员，并为国有国防工业公司和研究机构提供支持。</p>
 <p>此外，<ahref="https://globalnews.ca/news/9216877/china-military-air-force-recruiting-canadians/?utm_medium=Twitter&amp;utm_source=%40globalnews">加拿大国防部也表示</a>，正就中共政府可能支付高薪延揽加拿大喷射战斗机飞行员为中共空军进行训练的报导，展开调查。</p>
-<p>据法国《费加罗报》10月21日报导，北京也在利诱法国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E9%80%80%E5%BD%B9%E9%A3%9E%E8%A1%8C%E5%91%98.md#1">退役飞行员</a>，以训练中共军队如何在<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%AA%E7%A9%BA%E6%AF%8D%E8%88%B0.md#1">航空母舰</a>上起降飞机，并学习北约空军的战略。过去几年来已有数名战斗机飞行员在中国服务，其中也包含一位空军战略部队的退役飞行员。</p>
+<p>据法国《费加罗报》10月21日报导，北京也在利诱法国退役飞行员，以训练中共军队如何在航空母舰上起降飞机，并学习北约空军的战略。过去几年来已有数名战斗机飞行员在中国服务，其中也包含一位空军战略部队的退役飞行员。</p>
 <h2>参与加快中共航母进步的航空培训“是不明智的”</h2>
 <p>美国太平洋司令部夏威夷联合情报中心的前任行动主任卡尔?舒斯特告诉大纪元，未经政府许可，美国公民不得为外国政府工作。他不清楚英国和法国的法律，“但是至少，那些赴中国赚钱的英法飞行员这样做是不明智的，这无疑解释了中共自建造航母以来的快速进步”。</p>
-<p>中共军力快速成长，已拥有<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%88%AA%E7%A9%BA%E6%AF%8D%E8%88%B0.md#1">航空母舰</a>战队，野心勃勃地想要挑战美国海军在太平洋的地位。中共也常常叫嚣武力统一台湾。据中国军事杂志《兵工科技》报导，共军未来10年间需培养新增的100到150名海军飞行员，以搭配新加入的航舰舰队，但仍面临许多难题。</p>
+<p>中共军力快速成长，已拥有航空母舰战队，野心勃勃地想要挑战美国海军在太平洋的地位。中共也常常叫嚣武力统一台湾。据中国军事杂志《兵工科技》报导，共军未来10年间需培养新增的100到150名海军飞行员，以搭配新加入的航舰舰队，但仍面临许多难题。</p>
 <p>中共将招募之手伸向法国，因为法国飞行员掌握了在航舰上弹射式起飞与降落的精细技巧。中共第三艘航空母舰福建号装备有电磁起飞弹射器，这个技术只有美国使用，法国也即将采用。而英国自从80年代起就改用垂直起飞的猎鹰式攻击机。</p>
 <p>舒斯特表示，登陆航母以及从航母上起飞是非常具有挑战性的，快速完成则更具挑战性。因此，招募西方飞行员确实可以帮助中共加快他们的航母航空培训计划。</p>
 <p>2012年，中共官媒报导，中共军方成功将一架歼-15战斗机降落在中国第一艘航空母舰辽宁舰上。因此，舒斯特推测，中共应该在2010年就已经开始招募外国飞行员为自己培训了。</p>
 <h2>“战斗之前将棍子交给你的敌人”</h2>
-<p>但是，舒斯特表示，跟单纯培训舰载机起飞和降落的技能相比，他更担心西方飞行员为中共进行空对空作战<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%98%E6%9C%AF.md#1">战术</a>方面的训练。</p>
+<p>但是，舒斯特表示，跟单纯培训舰载机起飞和降落的技能相比，他更担心西方飞行员为中共进行空对空作战战术方面的训练。</p>
 <p>“我们如何进行战斗？我们的策略和程序是什么？这不仅仅是学习如何在航母上起飞和降落，它是关于学习航母飞行员所需的各种战斗技能。”</p>
 <p>舒斯特认为，西方国家允许自己的飞行员去培训中共飞行员是不明智的：“这有点像在战斗之前把一根棍子交给你的敌人。”</p>
 <p>“我能理解飞行员想要赚钱。但我不认为任何一个爱国的飞行员会因为任何利诱而这样做。”</p>
 <p>舒斯特表示，中共招募西方飞行员最大的好处在于，它窃取了法国和英国飞行员的战斗经验。英法曾经参与1990年的海湾战争“沙漠盾牌行动”（Operation Desert Shield）。</p>
-<p>“当你观察他们接近<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%98%E6%9C%AF.md#1">战术</a>目标的方式时，他们是如何穿透防空系统的？他们在攻击中起飞之后怎么做？这些是战争中可以确保飞行员生存的重要策略。所以我认为这就是中共招募他们的原因。他们正在寻求扩展他们的战术智慧和战术经验，并扩展他们在这些战术方面的培训计划。”</p>
+<p>“当你观察他们接近战术目标的方式时，他们是如何穿透防空系统的？他们在攻击中起飞之后怎么做？这些是战争中可以确保飞行员生存的重要策略。所以我认为这就是中共招募他们的原因。他们正在寻求扩展他们的战术智慧和战术经验，并扩展他们在这些战术方面的培训计划。”</p>
 <h2>“西方帮助中共成为西方威胁的又一个例子”</h2>
 <p>舒斯特认为，西方飞行员帮助中共培训，将让中共变得更加危险。</p>
 <p>“这是西方帮助中共成为西方威胁的又一个例子。它在帮助自己的敌人。我认为其后果是，在他们担心中共侵略南海或侵略台湾的时候，允许自己的飞行员去训练中共空军，（从而获得）可以用来打败自己或打败台湾的战术。如果这不是犯罪，它应该被列为犯罪。”</p>
@@ -36,46 +35,34 @@
 <p>舒斯特表示，如果某公司聘用西方飞行员来训练中国的飞行员，那么该公司就违反了美国法律。如果是美国飞行员培训中国的飞行员而没有上报，那么这个美国飞行员就触犯了法律。</p>
 <p>“但我没有看到任何报导说有美国飞行员正在这样做。”他补充说。◇</p>
 <p>责任编辑：连书华#</p>
-	
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13847953.md#1">中共偷聘英军人当教练 英国防部发罕见警报</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/18/n13848053.md#1">英阻退役飞官赴华培训共军 专家：台也应防堵</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/19/n13848511.md#1">忧退役飞行员被中共招募 澳洲防长下令调查</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/22/10/19/n13848749.md#1">中共秘密备战手法曝光 专家：台海战争或提前</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/4/11/n11180153.md#1" target="_blank">【征文】章阁：中国古代专制吗（上）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/15/9/5/n4520825.md#1" target="_blank">石铭：从爆破专家被酷刑致死看江氏集团的惨无人道</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/8/14/n10637364.md#1" target="_blank">中共“文艺沙皇”被囚9年 晚年反思悲剧终局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/6/6/n9230640.md#1" target="_blank">对中国法轮功学员被迫害的调查 (2)</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13922806.md#1">美国牧师濒死见地狱惨状 耶稣交代他一件事</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13924979.md#1">【未解之谜】风水高人揭秘：富贵的秘诀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/4/n13922072.md#1">【未解之谜】新旧交替 地球面临大更新</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13923685.md#1">【百年真相】故意黑江青？上海公安局长被关7年</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/3/n13921256.md#1">元宵节俗：一颗元宵汤圆承载的历史超乎想像</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/11/n13927305.md#1">【远见快评】ChatGPT的中国迷局</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927281.md#1">【财商天下】武汉万人围政府 引爆医保黑洞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927211.md#1">【十字路口】通敌叛国胜秦桧 史上最邪卖国贼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926114.md#1">全国疫苗受害家庭在北京集体起诉国务院</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926494.md#1">组图：FBI公布处理中共间谍气球的照片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926500.md#1">【一线采访】民众抗议新医保 武汉压力下让步</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925757.md#1">深夜弹钢琴被说扰邻 周杰伦曾用一句话回应</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925663.md#1">富商丈夫被爆涉嫌诈骗 王丽坤豪宅名车遭冻结</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13926612.md#1">陆综男星唐小强土耳其强震中遇难 年仅30岁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926349.md#1">丁强植葬阳明山 妻李璇跪地献花恸别挚爱</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/9/n13926541.md#1">开直播惊遇粉丝遭家暴 陆名嘴张大大在线吓傻</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/5/n13923218.md#1">消除胃酸逆流 喝苹果醋17个不可思议的好处</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924064.md#1">饱和脂肪都不好吗？这种脂肪更应留意</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/8/n13925579.md#1">喝不完的葡萄酒别扔 厨房5大妙用 调味绝佳</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/10/n13927000.md#1">睽违三年 札幌冰雪节壮观雪雕巡礼</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/2/6/n13924042.md#1">刻意隐藏负面情绪 小心走向绝望的深渊</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/25/n13852257.htm">国际警惕中共正招募西方飞行员培训其军队</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/22/10/25/n13852257.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/5/n14649620.md#1">幸福不是你能左右多少人，而是多少人愿意在你的左右</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/4/n14648578.md#1">大雪节气寒冬里 如何掌握养生要则与禁忌？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/26/n14643889.md#1">婚姻幸福之道：阴阳平衡 琴瑟和鸣</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/7/n14650550.md#1">【未解之谜】NASA也无法解释 太阳系神秘入侵者</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/17/n14637529.md#1">【古道人生】书生在饥荒中救一富家女成大富</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652776.md#1">【军事情报局】泰柬战争升级 F-16低空轰炸</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652899.md#1">【直播】NASA为探索月球、火星所做的准备</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652954.md#1">【百年真相】半夜鸡不叫：周扒皮冤案揭秘</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651393.md#1">普渡大学为何指示院系拒收中国留学生</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651372.md#1">【直播】NASA太空人告别太空站并关闭舱门</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651371.md#1">堕胎变催育 中共黑手再次伸向中国女性</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651351.md#1">迪丽热巴疑遭替身取代宣传新戏 视频吓坏网友</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652089.md#1">巧合还是刻意？中共官微帖文惊现“于朦胧”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651415.md#1">刘诗诗得奖遭临时撤换 主办方“爱奇艺”挨轰</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14652213.md#1">张柏芝遭索赔逾千万 法庭上情绪失控崩溃痛哭</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652972.md#1">消失一年被传死讯 陆网红冯提莫自曝停工内幕</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651622.md#1">为何在天气寒冷时会手脚冰冷？如何改善？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/9/n14651688.md#1">如何预防车窗起雾？让Toyota告诉你</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/10/n14652371.md#1">同一双袜子可以穿两次以上再洗吗？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650995.md#1">不小心让强力胶沾到物体表面 如何清除？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14650878.md#1">研究：说话时善用手势可以增加说服力</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/10/25/n13852257.htm">国际警惕中共正招募西方飞行员培训其军队</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/22/10/25/n13852257.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
