--- a/gb/24/12/30/n14401967.md
+++ b/gb/24/12/30/n14401967.md
@@ -80,12 +80,12 @@
 <p>大纪元首发</p>
 <p>责任编辑：高义#</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/11/n14549246.md#1">担忧被裁员 Z世代最不愿在职场使用AI</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/12/n14571859.md#1">从裁员到高校课程：AI改变职场与教育</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639479.md#1">华大人工智能计划获千万美元捐助</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639042.md#1">华州退休生活成本高居全美第五</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/12/8/n14651258.md#1">大华府急难救助协会举办防诈讲座　提升侨胞识诈能力</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/30/n14646219.md#1">2026年侨务委员会海外青年语文研习班开放报名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637130.md#1">2025大华府地区华语文推广重点聚落研讨会 隆重登场 圆满举行</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/16/n14637123.md#1">华府民俗文化种子教师研习3D果冻艺术创作</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/2/n10271780.md#1" target="_blank">中共淫乱的前生今世（9）四大基础</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/11/19/n11666929.md#1" target="_blank">澳洲自由党参议员抨击中共野蛮强摘器官</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/23/n10995753.md#1" target="_blank">九州：注定失败的共产主义</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/5/18/n7908087.md#1" target="_blank">三次听法轮功真相 大陆公安腿病神奇康复</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
