--- a/gb/25/10/28/n14624878.md
+++ b/gb/25/10/28/n14624878.md
@@ -14,12 +14,18 @@
 <p>议员周永鸿进一步批说，卢秀燕声称厨余仅会暂置于四大掩埋场，但实际上神冈掩埋场仍在偷偷倾倒厨余，“到底要说谎到什么时候？”他批，神冈掩埋场早已停用多年，如今未经环评、未有任何计划就重新倾倒厨余，完全违法乱来。厨余堆置不仅会吸引禽鸟、造成传染病风险，更可能产生渗水污染，尤其近日天候多雨，更将加速腐化、恶臭与污染。◇</p>
 <p>责任编辑：唐音</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414940.md#1">农民工讨薪 厦门象屿集团动用高压水枪驱逐</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/6/n14568122.md#1">四川江油校园霸凌引发大规模抗议 海外声援</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/7/n14569378.md#1">【纪元焦点】白纸运动未远 江油抗争已起</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/1/n14627448.md#1">海南国企偷砍农户槟榔树 引发警民冲突</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/4/n14524317.md#1">焚化炉污染高过中火2倍 中市议员揭数据吁正视</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14621945.md#1">台中掩埋毙死猪引疑虑 农业部调度生物处理机助焚化</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/23/n14622179.md#1">厨余不得进养猪场?环境部：每天近500公吨改焚化或掩埋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624053.md#1">防非洲猪瘟 台立委吁禁中国电商寄肉制品</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624119.md#1">台中非洲猪瘟案疑点多 兽医佐与特约兽医师均未到场</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624141.md#1">台中养猪场未传送厨余资料 卢秀燕吁修法订罚则</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624325.md#1">非洲猪瘟案场再爆:厨余蒸煮零纪录 兽医是药商</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/27/n14624407.md#1">非洲猪瘟案场完成清消 陈时中：2处仍检出病毒</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689431.md#1">中市部落小巴上轨道 无偿接送少棒队移地训练</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/26/2/2/n14689371.md#1">华美市场商圈停车困境   中市拍板规划汉口停车场</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank">加拿大总理的贺信</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/14/n11256527.md#1" target="_blank">【征文】凌晓辉：贞洁论（二）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/9/27/n10746220.md#1" target="_blank">觅真：真诚的感恩浸透着民心所向</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/11/3/n10828040.md#1" target="_blank">大饥荒是中共有计划的屠杀手段（中）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/20/1/10/n11782021.md#1" target="_blank">读《转法轮》澳洲西人找到生命意义</a></li>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
